Add ToDo Edit and Delete Feature

--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
             <div class="todos-list__container">
               <ul class="todos-list"></ul>
             </div>
+            <form action="#" class="edit-todo">
+              <label for="edit-todo-input">
+                <input type="text" id="edit-todo-input" required />
+              </label>
+              <div class="btn-container">
+                <button class="edit-todo-btn">Edit Task</button>
+                <span class="links edit-todo-cancelBtn">Cancel</span>
+              </div>
+            </form>
             <p class="todos-intro__btn"><span>+</span> Add Task</p>
           </div>
           <form action="#" class="add-todo">
@@ -183,7 +192,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia
             saepe accusamus voluptatibus porro illo.
           </p>
-          <button>Add a Goal Today</button>
+          <button class="add-goal-btn">Add a Goal Today</button>
         </div>
       </main>
     </section>
