feature(goals):delete goals enabled

--- a/index.html
+++ b/index.html
@@ -218,6 +218,27 @@
       </div>
     </div>
 
+    <!-- Add Project/Goal Modal -->
+    <div class="edit-modal">
+      <div class="edit-modal-content">
+        <form action="#" class="form-modal edit-goal">
+          <div class="header">
+            <h2>Add a Project</h2>
+          </div>
+
+          <label for="edit-goal-input">
+            Project Name:
+            <input type="text" id="edit-goal-input" required />
+          </label>
+
+          <div class="btn-modal-container">
+            <span class="close-edit-button links">Cancel</span>
+            <button class="edit-goal">Update</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <!-- Message Modal -->
     <div class="msgModal">
       <div class="modal-content">
