feature(goals):edit goals enabled

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <form action="#" class="theme__chnager">Theme Changer</form>
 
       <nav class="user-nav">
-        <div class="user-nav__item">
+        <!-- <div class="user-nav__item">
           <img src="" alt="Notifications" />
         </div>
         <div class="user-nav__item">
           <img src="" alt="Button" />
-        </div>
+        </div> -->
         <div class="user-nav__item">
           <span class="links auth" auth="sign-up">Sign Up</span>
         </div>
@@ -218,12 +218,12 @@
       </div>
     </div>
 
-    <!-- Add Project/Goal Modal -->
+    <!-- Edit Project/Goal Modal -->
     <div class="edit-modal">
       <div class="edit-modal-content">
-        <form action="#" class="form-modal edit-goal">
+        <form action="#" class="form-modal edit-project">
           <div class="header">
-            <h2>Add a Project</h2>
+            <h2>Edit a Project</h2>
           </div>
 
           <label for="edit-goal-input">
